enable_testing()
add_custom_target(test COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)

include_directories("../src")

# Para agregar tests hacer asi
add_executable(testPrueba
        test_prueba.cpp
)

add_executable(testProtocolClient
        test_protocol_client.cpp
        ../src/client/client_serializer.cpp
)

add_executable(testProtocolServer
        test_protocol_server.cpp
        ../src/server/server_serializer.cpp
        ../src/common/game_dto.cpp
        ../src/common/socket.cpp
        ../src/common/resolver.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
)

add_executable(testCollision
        test_collision.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp

)

add_executable(testShooting
        test_shoot_walker.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testShootingIdf
        test_shooting_idf.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testShootingScout
        test_shooting_scout.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp

        )

add_executable(testMovingUpSoldier
        test_moving_soldier_up.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testMovingSoldierDown
        test_moving_soldier_down.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testMovingSoldierRight
        test_moving_soldier_right.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testMoveSoldierLeft
        test_moving_soldier_left.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )
add_executable(testMoveMap
        test_move_map.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
        ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testExplosiveGrenade
        test_explosive_grenade.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testChaseSoldierWalking
        test_chase_soldier_walker.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testMapChaseSoldierWalking
        test_map_chase_soldier_walker.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testChaseSoldierWalkingObstacles
        test_chase_soldier_walker_obstacles.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testWalkerAttackSoldier
        test_walker_attack_soldier.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testChangeInStatesSoldier
        test_soldier_states.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        )

add_executable(testChangeInStatesZombie
        test_zombie_states.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        )
add_executable(testCollisionSoldier
        test_collision_soldiers.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        )
add_executable(testWalkerRemove
        test_walker_remove_from_map.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
         ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        )

add_executable(testChasingStates
        test_chasing_states.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
        ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp

        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        )

add_executable(testSmokeGrenade
        test_smoke_grenade.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
        ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        )

add_executable(testWitcher
        test_witcher.cpp
        ../src/game_logic/soldier.cpp
        ../src/game_logic/game_factory.cpp
        ../src/game_logic/zombies/infected.cpp
        ../src/game_logic/zombies/witch.cpp
        ../src/game_logic/map.cpp
        ../src/game_logic/chaser.cpp
        ../src/game_logic/weapons/scout.cpp
        ../src/game_logic/weapons/idf.cpp
        ../src/game_logic/weapons/p90.cpp
        ../src/game_logic/grenades/explosive_grenade.cpp
        ../src/game_logic/grenades/smoke_grenade.cpp
        ../src/game_logic/obstacle.cpp
        ../src/game_logic/states/idle.cpp
        ../src/game_logic/states/throwing_explosive_grenade.cpp
        ../src/game_logic/states/throwing_smoke_grenade.cpp
        ../src/game_logic/states/reloading.cpp
        ../src/game_logic/states/shooting.cpp
        ../src/game_logic/states/moving.cpp
        ../src/game_logic/states/dead.cpp
        ../src/game_logic/states/being_attacked.cpp
        ../src/game_logic/zombie_states/walking.cpp
        ../src/game_logic/zombie_states/zombie_idle.cpp
        ../src/game_logic/zombie_states/attacking.cpp
        ../src/game_logic/zombie_states/running.cpp
        ../src/game_logic/zombie_states/zombie_dead.cpp
        ../src/game_logic/zombie_states/screaming.cpp
        ../src/game_logic/zombie_states/zombie_being_attacked.cpp
        ../src/game_logic/zombie_states/stunned.cpp
        ../src/game_logic/zombie_states/jumping.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_walking.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_running.cpp
        ../src/game_logic/zombie_states/chasing_states/chase_jumping.cpp
        )


# target_link_libraries(testPrueba PRIVATE myLibrary)

# Despues agregar el target aca y listo
set(testTargets
        #testPrueba
        #testProtocolClient
        #testProtocolServer
        testCollision
        testShooting
        testShootingIdf
        testShootingScout
        testMovingUpSoldier
        testMovingSoldierDown
        testMovingSoldierRight
        testMoveSoldierLeft
        testMoveMap
        testExplosiveGrenade
        testChaseSoldierWalking
        testMapChaseSoldierWalking
        testChaseSoldierWalkingObstacles
        testChangeInStatesSoldier
        testChangeInStatesZombie
        testWalkerAttackSoldier
        testCollisionSoldier
        testWalkerRemove
        testChasingStates
        testSmokeGrenade
        testWitcher
)

foreach(target ${testTargets})
        add_test(NAME "${target}" COMMAND "${target}")

        add_dependencies(test "${target}")
endforeach()
